concurrency, interaction replies, speed