@@ -1,13 +1,12 @@
 package discord.util;
 
-import java.util.Arrays;
 import java.util.List;
 
 public final class CDN {
 
 	private static final String base_url = "https://cdn.discordapp.com";
-	private static final List<Integer> allowed_sizes = Arrays.asList(16, 32, 64, 128, 256, 512, 1024, 2048, 4096);
-	private static final List<String> allowed_extensions = Arrays.asList("webp", "png", "jpg", "jpeg", "gif");
+	private static final List<Integer> allowed_sizes = List.of(16, 32, 64, 128, 256, 512, 1024, 2048, 4096);
+	private static final List<String> allowed_extensions = List.of("webp", "png", "jpg", "jpeg", "gif");
 
 	private static String makeURL(String path, int size, String extension) {
 		if (extension == null)
